force-app/main/default/objects/BioTang_Disclosure__c/BioTang_Disclosure__c.object-meta.xml
<CustomObject>
    <label>BioTang Disclosure</label>
    <nameField>
        <label>BioTang Disclosure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BioTang Disclosures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>