force-app/main/default/objects/BioTang_Disclosure__c/fields/Antibody_Count__c.field-meta.xml
<CustomField>
    <fullName>Antibody_Count__c</fullName>
    <label>Antibody Count</label>
    <summaryForeignKey>Antibody__c.bioTangDisclosure__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>