force-app/main/default/objects/BioTang_Disclosure__c/fields/Cell_Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Cell_Line_Count__c</fullName>
    <label>Cell Line Count</label>
    <summaryForeignKey>Cell_Line__c.bioTangDisclosure__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>