force-app/main/default/objects/BioTang_Disclosure__c/fields/Collaborators_Detail__c.field-meta.xml
<CustomField>
    <fullName>Collaborators_Detail__c</fullName>
    <label>Collaborators Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>