force-app/main/default/objects/BioTang_Disclosure__c/fields/depositAndDistribution__c.field-meta.xml
<CustomField>
    <fullName>depositAndDistribution__c</fullName>
    <label>Deposit and Distribution</label>
    <length>80</length>
    <type>Text</type>
</CustomField>