force-app/main/default/objects/BioTang_Disclosure__c/fields/disclosure__c.field-meta.xml
<CustomField>
    <fullName>disclosure__c</fullName>
    <label>Disclosure</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Disclosure record type must match BioTang Disclosure type</errorMessage>
        <filterItems>
            <field>Disclosure__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>BioTang_Disclosure</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Disclosure__c</referenceTo>
    <relationshipLabel>BioTang Disclosure</relationshipLabel>
    <relationshipName>BioTang_Disclosure</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>