force-app/main/default/objects/BioTang_Disclosure__c/fields/frequencyOfRequests__c.field-meta.xml
<CustomField>
    <fullName>frequencyOfRequests__c</fullName>
    <label>Frequency Of Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>