force-app/main/default/objects/BioTang_Disclosure__c/fields/materialsFromOtherLabs__c.field-meta.xml
<CustomField>
    <fullName>materialsFromOtherLabs__c</fullName>
    <label>Materials From Other Labs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_U</valueSetName>
    </valueSet>
</CustomField>