force-app/main/default/objects/BioTang_Disclosure__c/fields/MIT_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>MIT_Point_of_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MIT Point of Contact (Old)</label>
    <referenceTo>TLO_Contact__c</referenceTo>
    <relationshipLabel>BioTang Point of Contact OLD</relationshipLabel>
    <relationshipName>BioTang_Point_of_Contact_OLD</relationshipName>
    <type>Lookup</type>
</CustomField>