force-app/main/default/objects/BioTang_Disclosure__c/fields/MIT_Shipper__c.field-meta.xml
<CustomField>
    <fullName>MIT_Shipper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MIT Shipper (Old)</label>
    <referenceTo>TLO_Contact__c</referenceTo>
    <relationshipLabel>BioTang Shipper OLD</relationshipLabel>
    <relationshipName>BioTang_Shipper_OLD</relationshipName>
    <type>Lookup</type>
</CustomField>