force-app/main/default/objects/BioTang_Disclosure__c/fields/MIT_Shipper_Acc__c.field-meta.xml
<CustomField>
    <fullName>MIT_Shipper_Acc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MIT Shipper</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Related Account must be a Person Account.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BioTang Shipper</relationshipLabel>
    <relationshipName>BioTang_Shipper</relationshipName>
    <type>Lookup</type>
</CustomField>