force-app/main/default/objects/BioTang_Disclosure__c/fields/Mouse_Strain_Count__c.field-meta.xml
<CustomField>
    <fullName>Mouse_Strain_Count__c</fullName>
    <label>Mouse Strain Count</label>
    <summaryForeignKey>Mouse_Strain__c.bioTangDisclosure__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>