force-app/main/default/objects/BioTang_Disclosure__c/fields/Other_Material_Count__c.field-meta.xml
<CustomField>
    <fullName>Other_Material_Count__c</fullName>
    <label>Other Material Count</label>
    <summaryForeignKey>Other_Material__c.bioTangDisclosure__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>