force-app/main/default/objects/BioTang_Disclosure__c/fields/Plasmid_Count__c.field-meta.xml
<CustomField>
    <fullName>Plasmid_Count__c</fullName>
    <label>Plasmid Count</label>
    <summaryForeignKey>Plasmid__c.bioTangDisclosure__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>