force-app/main/default/objects/BioTang_Disclosure__c/fields/publications__c.field-meta.xml
<CustomField>
    <fullName>publications__c</fullName>
    <label>Publications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_U</valueSetName>
    </valueSet>
</CustomField>