force-app/main/default/objects/BioTang_Disclosure__c/fields/publicationsLinkToRef__c.field-meta.xml
<CustomField>
    <fullName>publicationsLinkToRef__c</fullName>
    <label>Publications Link To Ref</label>
    <type>Url</type>
</CustomField>