force-app/main/default/objects/BioTang_Disclosure__c/fields/repositoryDetails__c.field-meta.xml
<CustomField>
    <fullName>repositoryDetails__c</fullName>
    <label>Repository Details</label>
    <type>TextArea</type>
</CustomField>