force-app/main/default/objects/BioTang_Disclosure__c/fields/wasDevAsPartOfCollaboration__c.field-meta.xml
<CustomField>
    <fullName>wasDevAsPartOfCollaboration__c</fullName>
    <label>Was Developed As Part Of Collaboration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_U</valueSetName>
    </valueSet>
</CustomField>