force-app/main/default/objects/BioTang_Disclosure__c/recordTypes/antibody.recordType-meta.xml
<RecordType>
    <fullName>antibody</fullName>
    <active>true</active>
    <label>Antibody</label>
</RecordType>