force-app/main/default/objects/BioTang_Disclosure__c/recordTypes/cellLine.recordType-meta.xml
<RecordType>
    <fullName>cellLine</fullName>
    <active>true</active>
    <label>Cell Line</label>
</RecordType>