force-app/main/default/objects/BioTang_Disclosure__c/recordTypes/mouseStrain.recordType-meta.xml
<RecordType>
    <fullName>mouseStrain</fullName>
    <active>true</active>
    <label>Mouse Strain</label>
</RecordType>