force-app/main/default/objects/BioTang_Disclosure__c/recordTypes/otherMaterial.recordType-meta.xml
<RecordType>
    <fullName>otherMaterial</fullName>
    <active>true</active>
    <label>Other Material</label>
</RecordType>