force-app/main/default/objects/BioTang_Disclosure__c/recordTypes/plasmid.recordType-meta.xml
<RecordType>
    <fullName>plasmid</fullName>
    <active>true</active>
    <label>Plasmid</label>
</RecordType>