force-app/main/default/objects/BioTang_Disclosure__c/validationRules/One_to_One_Relationship.validationRule-meta.xml
<ValidationRule>
    <fullName>One_to_One_Relationship</fullName>
    <active>true</active>
    <errorConditionFormula>(Cell_Line_Count__c +  Antibody_Count__c + Mouse_Strain_Count__c +  Other_Material_Count__c +  Plasmid_Count__c) &gt; 1</errorConditionFormula>
    <errorMessage>There can only be one child per BioTang Disclosure</errorMessage>
</ValidationRule>